--- a/home/index.html
+++ b/home/index.html
@@ -13,24 +13,21 @@
     }
 
     html, body {
+      overflow-x: hidden;
       background-color: white;
       font-family: 'Oswald', sans-serif;
       user-select: none;
       height: 100%;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
     }
 
-    body.sidebar-open,
-    body.cart-open {
+    body.sidebar-open, body.cart-open {
       overflow: hidden;
       position: fixed;
       width: 100%;
-      height: 100%;
     }
 
     header {
-      position: relative; /* scrolls normally, not fixed */
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -39,11 +36,9 @@
       justify-content: space-between;
       align-items: center;
       padding: 8px 16px;
-      background: transparent;
-      z-index: 2000;
+      background-color: transparent;
+      z-index: 1500;
       pointer-events: none;
-      user-select: none;
-      color: black;
     }
 
     .icon-btn.menu-toggle,
@@ -52,7 +47,6 @@
       pointer-events: auto;
       cursor: pointer;
       user-select: none;
-      color: black;
     }
 
     .logo-container {
@@ -73,7 +67,6 @@
       user-select: none;
       position: relative;
       top: 3px;
-      color: black;
     }
 
     .logo-image {
@@ -113,104 +106,44 @@
     .icon-btn.cart-toggle img {
       width: 100%;
       height: auto;
-      filter: brightness(0) invert(0); /* black icon */
-      pointer-events: none;
+      filter: brightness(0) invert(0);
     }
 
-    /* Overlay fade behind sidebars */
-    #overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0,0,0,0.3);
-      z-index: 1050;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-    }
-    #overlay.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
-
-    /* Sidebar base styles */
+    /* Sidebars */
     .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
-      height: 100vh;
       background: white;
       font-family: 'Oswald', sans-serif;
       font-weight: 400;
       font-size: 24px;
       transition: transform 0.4s ease-in-out;
+      z-index: 1400;
       overflow-y: auto;
-      z-index: 1100;
+      height: 100vh;
       text-align: center;
       padding-top: 80px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
-    /* Menu Sidebar */
+    /* Sidebar (left) */
     .sidebar {
       left: 0;
-      width: 100vw; /* full screen on mobile */
+      width: 100vw;
       max-width: 320px;
+      padding-left: 0;
+      padding-right: 0;
       transform: translateX(-100%);
       display: flex;
       flex-direction: column;
       align-items: center;
       position: fixed;
     }
+
     .sidebar.open {
       transform: translateX(0);
     }
 
-    /* Cart Sidebar */
-    .cart-sidebar {
-      right: 0;
-      width: 50vw;
-      max-width: 320px;
-      padding: 80px 20px;
-      transform: translateX(100%);
-      text-align: left;
-      position: fixed;
-      background: white;
-    }
-    .cart-sidebar.open {
-      transform: translateX(0);
-    }
-
-    /* Close buttons inside sidebars */
-    .sidebar .close-btn,
-    .cart-sidebar .close-btn {
-      position: absolute;
-      top: 12px;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-      user-select: none;
-      color: black;
-      font-size: 28px;
-      font-weight: 700;
-      line-height: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: color 0.3s ease;
-    }
-    .sidebar .close-btn {
-      left: 16px; /* left corner inside sidebar */
-    }
-    .cart-sidebar .close-btn {
-      right: 16px; /* right corner inside cart sidebar */
-    }
-    .sidebar .close-btn:hover,
-    .cart-sidebar .close-btn:hover {
-      color: #555;
-    }
-
-    /* Sidebar navigation links */
     .sidebar nav {
       display: flex;
       flex-direction: column;
@@ -321,29 +254,121 @@
       border-bottom: 1px solid black;
     }
 
-    /* Overlay content fade when sidebar open */
-    main,
-    .image-box,
-    .product-info,
-    .product-image-box {
-      transition: filter 0.3s ease;
-    }
-    body.sidebar-open main,
-    body.sidebar-open .image-box,
-    body.sidebar-open .product-info,
-    body.sidebar-open .product-image-box,
-    body.cart-open main,
-    body.cart-open .image-box,
-    body.cart-open .product-info,
-    body.cart-open .product-image-box {
-      filter: brightness(0.7);
-      user-select: none;
-      pointer-events: none;
+    /* Cart sidebar (right) */
+    .cart-sidebar {
+      right: 0;
+      width: 50vw;
+      max-width: 280px;
+      padding: 80px 20px;
+      transform: translateX(100%);
+      text-align: left;
+      background: white;
+      position: fixed;
+      top: 0;
+      height: 100vh;
+      overflow-y: auto;
+      z-index: 1400;
+      transition: transform 0.4s ease-in-out;
+      box-shadow: -2px 0 10px rgba(0,0,0,0.1);
     }
 
-    /* Slider */
+    .cart-sidebar.open {
+      transform: translateX(0);
+    }
+
+    /* X close buttons inside sidebars */
+    .sidebar .close-btn,
+    .cart-sidebar .close-btn {
+      position: absolute;
+      top: 18px;
+      right: 16px;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      user-select: none;
+      z-index: 1600;
+    }
+
+    .close-btn:before,
+    .close-btn:after {
+      content: '';
+      position: absolute;
+      left: 11px;
+      top: 0;
+      width: 2px;
+      height: 24px;
+      background-color: black;
+    }
+
+    .close-btn:before {
+      transform: rotate(45deg);
+    }
+
+    .close-btn:after {
+      transform: rotate(-45deg);
+    }
+
+    /* Product image and info (from your original code) */
+    .product-image-box {
+      width: 90vw;
+      max-width: 600px;
+      margin: 40px auto 8px auto;
+      background: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: visible;
+      cursor: pointer;
+    }
+
+    .jersey-img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      transition: transform 0.25s ease-in-out;
+      image-rendering: auto;
+    }
+
+    .jersey-img:hover {
+      transform: scale(1.03);
+    }
+
+    .product-info {
+      text-align: center;
+      margin-bottom: 24px;
+      margin-top: 16px;
+      user-select: none;
+    }
+
+    .product-title {
+      font-weight: 700;
+      font-size: 22px;
+      margin-bottom: 4px;
+      cursor: pointer;
+      transition: border-bottom 0.2s ease;
+      user-select: none;
+    }
+
+    .product-title:hover {
+      border-bottom: 1.5px solid black;
+    }
+
+    .product-color {
+      font-weight: 400;
+      font-size: 16px;
+      color: black;
+      margin-bottom: 4px;
+    }
+
+    .product-price {
+      font-weight: 400;
+      font-size: 20px;
+      color: black;
+    }
+
+    /* Slider and arrows */
     .image-box {
-      margin-top: 0;
+      margin-top: 64px;
       width: 100%;
       max-width: 600px;
       aspect-ratio: 3 / 4;
@@ -392,32 +417,7 @@
       transform: translateY(-50%) rotate(-45deg);
     }
 
-    /* Product grid */
-    .product-image-box,
-    .product-info {
-      opacity: 0;
-      animation: fadeIn 1s ease forwards;
-      animation-delay: 0.3s;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
     @media (max-width: 767px) {
-      /* Menu sidebar full screen */
-      .sidebar {
-        width: 100vw !important;
-        max-width: none !important;
-      }
-      /* Cart sidebar half screen */
-      .cart-sidebar {
-        width: 50vw !important;
-        max-width: none !important;
-      }
-
       .sidebar nav a {
         text-align: center;
         display: inline-block;
@@ -425,12 +425,6 @@
 
       .policies-dropdown {
         margin-left: 0;
-      }
-    }
-
-    @media (min-width: 768px) {
-      header {
-        display: flex;
       }
     }
   </style>
@@ -444,22 +438,19 @@
     <span></span>
   </div>
 
-  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Reload page">
+  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Reload home page">
     <span class="logo-text" id="logoText">MATT SCIANNA</span>
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
   </div>
 
   <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0" aria-label="Toggle cart" aria-expanded="false">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
-    <div id="cartCount" class="cart-count">0</div>
+    <div id="cartCount" class="cart-count" style="display:none;">0</div>
   </div>
 </header>
 
-<!-- Overlay behind sidebars -->
-<div id="overlay"></div>
-
-<div class="image-box" tabindex="-1">
-  <div class="slider" id="slider" aria-live="polite">
+<div class="image-box" aria-live="polite" aria-label="Product image slider">
+  <div class="slider" id="slider">
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');" role="img" aria-label="Slide 1"></div>
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');" role="img" aria-label="Slide 2"></div>
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');" role="img" aria-label="Slide 3"></div>
@@ -489,7 +480,7 @@
 </div>
 
 <nav id="sidebar" class="sidebar" aria-label="Main navigation" aria-hidden="true">
-  <div class="close-btn" id="menuCloseBtn" aria-label="Close menu" role="button" tabindex="0">&times;</div>
+  <div class="close-btn" role="button" tabindex="0" aria-label="Close menu sidebar"></div>
   <nav>
     <a href="https://mattscianna.com/home" class="current">HOME</a>
     <a href="https://mattscianna.com/lookbooks">LOOKBOOKS</a>
@@ -505,64 +496,68 @@
 </nav>
 
 <nav id="cartSidebar" class="cart-sidebar" aria-label="Shopping cart" aria-hidden="true">
-  <div class="close-btn" id="cartCloseBtn" aria-label="Close cart" role="button" tabindex="0">&times;</div>
+  <div class="close-btn" role="button" tabindex="0" aria-label="Close cart sidebar"></div>
   <!-- Cart sidebar content is dynamically inserted -->
 </nav>
 
 <script>
+  // DOM elements
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
+  const sidebarCloseBtn = sidebar.querySelector('.close-btn');
   const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
+  const cartCloseBtn = cartSidebar.querySelector('.close-btn');
   const logoContainer = document.getElementById('logoContainer');
-  const overlay = document.getElementById('overlay');
-  const menuCloseBtn = document.getElementById('menuCloseBtn');
-  const cartCloseBtn = document.getElementById('cartCloseBtn');
 
   let currentSlide = 0;
   const slider = document.getElementById('slider');
   const slides = slider.children;
   const totalSlides = slides.length;
 
-  // Prevent opening both sidebars simultaneously
+  // Clicking logo reloads home page
+  logoContainer.addEventListener('click', () => {
+    window.location.href = '/';
+  });
+
+  // Sidebar open/close functions
   function closeCart() {
     cartSidebar.classList.remove('open');
-    cartIcon.classList.remove('open');
-    document.body.classList.remove('cart-open');
     cartIcon.setAttribute('aria-expanded', 'false');
     cartSidebar.setAttribute('aria-hidden', 'true');
-    overlay.classList.remove('active');
+    document.body.classList.remove('cart-open');
   }
 
   function closeMenu() {
     sidebar.classList.remove('open');
-    menuToggle.classList.remove('open');
-    document.body.classList.remove('sidebar-open');
     menuToggle.setAttribute('aria-expanded', 'false');
     sidebar.setAttribute('aria-hidden', 'true');
-    overlay.classList.remove('active');
+    document.body.classList.remove('sidebar-open');
   }
 
   function openMenu() {
-    closeCart();
+    // Close cart if open
+    if (cartSidebar.classList.contains('open')) {
+      closeCart();
+    }
     sidebar.classList.add('open');
-    menuToggle.classList.add('open');
-    document.body.classList.add('sidebar-open');
     menuToggle.setAttribute('aria-expanded', 'true');
     sidebar.setAttribute('aria-hidden', 'false');
-    overlay.classList.add('active');
+    document.body.classList.add('sidebar-open');
   }
 
   function openCart() {
-    closeMenu();
+    // Close menu if open
+    if (sidebar.classList.contains('open')) {
+      closeMenu();
+    }
     cartSidebar.classList.add('open');
-    cartIcon.classList.add('open');
-    document.body.classList.add('cart-open');
     cartIcon.setAttribute('aria-expanded', 'true');
     cartSidebar.setAttribute('aria-hidden', 'false');
-    overlay.classList.add('active');
+    document.body.classList.add('cart-open');
   }
 
+  // Toggle menu sidebar
   menuToggle.addEventListener('click', () => {
     if (sidebar.classList.contains('open')) {
       closeMenu();
@@ -571,9 +566,7 @@
     }
   });
 
-  menuCloseBtn.addEventListener('click', closeMenu);
-  cartCloseBtn.addEventListener('click', closeCart);
-
+  // Toggle cart sidebar
   cartIcon.addEventListener('click', () => {
     if (cartSidebar.classList.contains('open')) {
       closeCart();
@@ -582,65 +575,79 @@
     }
   });
 
-  overlay.addEventListener('click', () => {
-    closeMenu();
-    closeCart();
-  });
+  // Close buttons inside sidebars
+  sidebarCloseBtn.addEventListener('click', closeMenu);
+  cartCloseBtn.addEventListener('click', closeCart);
 
-  // Reload page when clicking on MATT SCIANNA logo
-  logoContainer.addEventListener('click', () => {
-    location.href = '/';
-  });
-
-  logoContainer.addEventListener('keydown', e => {
+  // Keyboard accessibility for close buttons
+  sidebarCloseBtn.addEventListener('keydown', e => {
     if (e.key === 'Enter' || e.key === ' ') {
       e.preventDefault();
-      location.href = '/';
+      closeMenu();
+    }
+  });
+
+  cartCloseBtn.addEventListener('keydown', e => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      closeCart();
+    }
+  });
+
+  // Policies dropdown toggle
+  const policiesLink = document.getElementById('policiesLink');
+  const policiesDropdown = document.getElementById('policiesDropdown');
+
+  policiesLink.addEventListener('click', e => {
+    e.preventDefault();
+    const expanded = policiesLink.getAttribute('aria-expanded') === 'true';
+    if (expanded) {
+      policiesLink.setAttribute('aria-expanded', 'false');
+      policiesLink.classList.remove('arrow-open');
+      policiesLink.classList.add('arrow-closed');
+      policiesDropdown.classList.remove('open');
+      policiesDropdown.setAttribute('aria-hidden', 'true');
+    } else {
+      policiesLink.setAttribute('aria-expanded', 'true');
+      policiesLink.classList.remove('arrow-closed');
+      policiesLink.classList.add('arrow-open');
+      policiesDropdown.classList.add('open');
+      policiesDropdown.setAttribute('aria-hidden', 'false');
     }
   });
 
   // Slider functions
   function showSlide(index) {
-    if (index < 0) index = totalSlides - 1;
-    else if (index >= totalSlides) index = 0;
-    currentSlide = index;
-    slider.style.transform = `translateX(-${index * 100}%)`;
-  }
-
-  function nextSlide() {
-    showSlide(currentSlide + 1);
+    if (index < 0) {
+      currentSlide = totalSlides - 1;
+    } else if (index >= totalSlides) {
+      currentSlide = 0;
+    } else {
+      currentSlide = index;
+    }
+    slider.style.transform = `translateX(-${currentSlide * 100}%)`;
   }
 
   function prevSlide() {
     showSlide(currentSlide - 1);
   }
 
-  window.nextSlide = nextSlide;
-  window.prevSlide = prevSlide;
+  function nextSlide() {
+    showSlide(currentSlide + 1);
+  }
 
-  // Policies dropdown toggle
-  const policiesLink = document.getElementById('policiesLink');
-  const policiesDropdown = document.getElementById('policiesDropdown');
-
-  policiesLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    const isOpen = policiesDropdown.classList.contains('open');
-    if (isOpen) {
-      policiesDropdown.classList.remove('open');
-      policiesLink.classList.remove('arrow-open');
-      policiesLink.classList.add('arrow-closed');
-      policiesLink.setAttribute('aria-expanded', 'false');
-      policiesDropdown.setAttribute('aria-hidden', 'true');
-    } else {
-      policiesDropdown.classList.add('open');
-      policiesLink.classList.add('arrow-open');
-      policiesLink.classList.remove('arrow-closed');
-      policiesLink.setAttribute('aria-expanded', 'true');
-      policiesDropdown.setAttribute('aria-hidden', 'false');
-    }
+  // Keyboard controls for slider arrows
+  document.querySelectorAll('.arrow').forEach(arrow => {
+    arrow.addEventListener('keydown', e => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        if (arrow.classList.contains('left')) prevSlide();
+        else nextSlide();
+      }
+    });
   });
 
-  // Initialize slider to first slide
+  // Initialize first slide
   showSlide(0);
 </script>
 
